# histomap-pipeline

./: .gitignore  README.md  pyproject.toml  validate_query.py
.github/workflows/: pipeline.yml
config/: categories.yml  pipeline.yml
pipeline/: config.py  enrichment.py  main.py  models.py  serialise.py  tiles.py  upload.py
pipeline/source/: wikidata.py
sparql-proxy/: wrangler.toml
sparql-proxy/src/: index.js
tests/: test_enrichment.py  test_serialise.py  test_source.py
