[project]
name = "histomap-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "SPARQLWrapper>=2.0",
    "boto3>=1.34",          # Cloudflare R2 via S3-compatible API
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "jsonschema>=4.0",      # GeoJSON validation in tests
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
